Revise Music page

--- a/music.html
+++ b/music.html
@@ -3,67 +3,38 @@ layout: default
 title: Forrest Wolf - Music
 ---
 <div>
-  <p>I'm a songwriter, play the bowed psaltery, and sing frequently even though I never got to be much good at it.</p>
-  <p>
-    Every year, I participate in February Album Writing Month (FAWM), a challenge to write and record an album during the month of February. Most of these aren't currently available, as mixing and arranging is a much longer process than songwriting; but links to a few songs that are further along in that process or otherwise noteworthy can be found on this page.
-  </p>
-  <p>A few of the projects I've worked on can be found below.</p>
+  <section class="project flex">
+    <h2 class="left-side">
+      <img src="./assets/images/remember-the-world-cover.png" alt="Remember the World cover">
+      <a href="https://forrestwolf.bandcamp.com/album/remember-the-world">Remember the World</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        An instrumental EP, released January 2021.
+      </p>
+    </div>
+  </section>
 
   <section class="project flex">
     <h2 class="left-side">
-      <!-- <img src="./assets/images/psaltery.jpg" alt="Photo of my psaltery"> -->
+      <img src="./assets/images/playing-psaltery.png" alt="Photo of Forrest Wolf, playing the bowed psaltery">
+      <a href="https://www.youtube.com/channel/UCAqR1U3HQkJ9P0u6ZWwL5jA">Youtube</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        Youtube channel, on which I mostly cover various songs on the psaltery.
+      </p>
+    </div>
+  </section>
+
+  <section class="project flex">
+    <h2 class="left-side">
+      <img src="./assets/images/psaltery.jpg" alt="Photo of a bowed psaltery">
       <a href="./psaltery.html">Bowed Psaltery</a>
     </h2>
     <div class="project-info right-side">
       <p>I play a rather unusual instrument called a bowed psaltery.
-        <a href="./psaltery.html">Here's</a> an explanation of what it's like.</p>
+      <a href="./psaltery.html">Here's</a> an explanation of what it's like.</p>
     </div>
   </section>
-  <section class="project flex">
-    <h2 class="left-side">
-      <!-- <img src="" alt="Across the Broken Land Cover - "> -->
-      Across the Broken Land
-    </h2>
-    <div class="project-info right-side">
-      <p>
-        During February Album Writing Month 2019, I wrote five songs comprising a first draft of the album to be titled <i>Across The Broken Land</i>.
-      </p>
-    </div>
-  </section>
-  <section class="project flex">
-    <h2 class="left-side">
-      <!-- <img src="" alt="Domains and Angles Cover - "> -->
-      Domains and Angles
-    </h2>
-    <div class="project-info right-side">
-      <p>
-          During February Album Writing Month 2018, I wrote eleven songs comprising the album I have titled <i>Domains and Angles</i>, which centers on themes of the difficulty of communication, the changing nature of the city in which I live, and non-euclidean geometry.
-      </p>
-      <p>
-        A sample song, The Season of Rust, can be found <a href="https://soundcloud.com/user-957283792/the-season-of-rust-fawm-demo">here</a>.
-      </p>
-    </div>
-  </section>
-
-  <section class="project flex">
-    <h2 class="left-side">
-      <a href="https://forrestweiswolf.github.io/echo/">Echo</a>
-    </h2>
-    <div class="project-info right-side">
-      <p>When practicing a song, I sometimes want to play and record a very short part of it, listen to that in order to hear whether I got the timing right, then repeat, potentially repeating this many times in a row.</p>
-      <p>Putting down my bow to reset the recording every time is inconvenient and distracting when working on a section that's only seconds long, so I made this webpage, which records for a specified number of seconds, plays it back, then waits a specified number of seconds before starting over.</p>
-      <a href="https://forrestweiswolf.github.io/echo/">ForrestWeiswolf.github.io/echo/</a>
-    </div>
-  </section>
-
-  <!-- <section class="project flex">
-      <h2 class="left-side">
-        <img src="" alt="Remember the World cover - ">
-        <a href="">Remember the World</a>
-      </h2>
-      <div class="project-info right-side">
-        <p>
-        </p>
-      </div>
-    </section> -->
 </div>
