Minor header changes

--- a/music.html
+++ b/music.html
@@ -3,6 +3,7 @@ layout: default
 title: Forrest Wolf - Music
 ---
 <div>
+  <h1>Music</h1>
   <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/remember-the-world-cover.png" alt="Remember the World cover">
