--- a/index.html
+++ b/index.html
@@ -2,30 +2,27 @@
 layout: default
 title: Forrest Wolf
 ---
-<section id="about" class="flex">
-  <div class="left-side">
+<section id="about">
+  <!-- <div class="left-side">
     <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" class="large-image" />
   </div>
-  <div class="right-side">
-    <section id="summary">
-      I'm Forrest Wolf, a software engineer and musician. Currently living in Brooklyn, NY; previously Des Moines, IA.
-    </section>
+  <div class="right-side"> -->
+  <p>I'm Forrest Wolf, a software engineer and musician. Currently living in Brooklyn, NY; previously Des Moines, IA.</p>
+  <p>
+    <h4>Contact</h4>
+    <ul>
+      <li>
+        <a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
+      </li>
 
-    <section id="contact">
-      <h4>Contact</h4>
-      <ul>
-        <li>
-          <a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
-        </li>
+      <li>
+        <a href="https://github.com/ForrestWeiswolf">Github</a>
+      </li>
 
-        <li>
-          <a href="https://github.com/ForrestWeiswolf">Github</a>
-        </li>
-
-        <li>
-          <a href="./assets/image/2if24wp7oqlodqdlgei1n1520.png">LinkedIn</a>
-        </li>
-      </ul>
-    </section>
-  </div>
+      <li>
+        <a href="./assets/image/2if24wp7oqlodqdlgei1n1520.png">LinkedIn</a>
+      </li>
+    </ul>
+  </p>
+  <!-- </div> -->
 </section>
