--- a/miscellania.html
+++ b/miscellania.html
@@ -4,4 +4,5 @@ title: Forrest Wolf - Miscelania
 ---
 <div>
   <a href="./miscellania/lesser-known-sf-f.html">Favorite lesser-known SF&F</a>
+  <a href="./miscellania/books-2021.html">Books I read in 2021</a>
 </div>
