Add answer to FAQ

--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@ title: Forrest Wolf - Psaltery
     <sub>* I believe that this exchange is generally used as a <a href=https://en.wikipedia.org/wiki/Phatic_expression>phatic expression</a>; in some cases, my response here may thus be intended more as 'giving the correct password in a standard protocol' than as a statement of fact.</sub>
 
     <h4>Have you read anything interesting lately?</h4>
-    <p></p>
+    <p>(I'm not going to keep the website up to date on this, but if you want an idea what sort of things I read in general, <a href="./miscellania/books-2021.html">this list</a> should help.)</p>
 
     <h4>What's the password?</h4>
     <p id="a-password"></p>
