--- a/miscellania.html
+++ b/miscellania.html
@@ -4,9 +4,9 @@ title: Forrest Wolf - Miscelania
 ---
 <ul>
   <li>
-    <a href="./miscellania/lesser-known-sf-f.html">Favorite lesser-known SF&F</a>
+    <a href="{{ site.url }}/miscellania/lesser-known-sf-f.html">Favorite lesser-known SF&F</a>
   </li>
   <li>
-    <a href="./miscellania/books-2021.html">Books I read in 2021</a>
+    <a href="{{ site.url }}/miscellania/books-2021.html">Books I read in 2021</a>
   </li>
 </ul>
