Add Admonymous and Manifold links

--- a/miscellania.html
+++ b/miscellania.html
@@ -4,6 +4,12 @@ title: Forrest Wolf - Miscelania
 ---
 <ul>
   <li>
+    <a href="https://admonymous.co/forrestwolf">Admonymous</a> (Leave me anonymous feedback)
+  </li>
+  <li>
+    <a href="https://manifold.markets/Forrest">Manifold Markets</a>
+  </li>
+  <li>
     <a href="{{ site.url }}/miscellania/lesser-known-sf-f.html">Favorite lesser-known SF&F</a>
   </li>
   <li>
