Add list of stories which are difficult to recommend

--- a/miscellania.html
+++ b/miscellania.html
@@ -15,4 +15,7 @@ title: Forrest Wolf - Miscelania
   <li>
     <a href="{{ site.url }}/miscellania/books-2021.html">Books I read in 2021</a>
   </li>
+  <li>
+    <a href="{{ site.url }}/miscellania/difficult-recommendations.html">Stories which are difficult to recommend</a>
+  </li>
 </ul>
