Improve phrasing of intro to list of books read in 2021

--- a/miscellania/books-2021.html
+++ b/miscellania/books-2021.html
@@ -3,7 +3,7 @@ layout: default
 title: Books read in 2021
 ---
 <div>
-  <p>A list of books I read in 2021, in order of when I finished reading them. Does not include rereads nor online serial fiction, though both make up a substantial portion of what I read; aside from that, this list should be comprehensive and give a general idea of the sort of thing I read.</p>
+  <p>A list of books I read in 2021, in order of when I finished reading them. Does not include rereads nor online serial fiction, though both make up a substantial portion of what I read; aside from that, this list is comprehensive. I've put this here with the intention of giving a general idea of what sort books I tend to read.</p>
   <ul>
     <li>Rhythm of War, by Brandon Sanderson</li>
     <li>The Scar, by China Mieville</li>
