Add another 'password' to the FAQ

--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,7 @@ title: Forrest Wolf - Psaltery
         'Schelling point',
         'Correct horse battery staple',
         'Recognition code 27: I am a potato',
+        'Fine, thanks. How are you?'
       ];
       const randomPassword = passwords[Math.floor(Math.random() * passwords.length)];
       document.getElementById('a-password').textContent = randomPassword;
