Improve vampire FAQ answer

--- a/faq.html
+++ b/faq.html
@@ -44,6 +44,6 @@ title: Forrest Wolf - Psaltery
     <p id="a-password"></p>
 
     <h4>Are you a vampire?</h4>
-    <p>I will neither confirm nor deny.</p>
+    <p>I will neither confirm nor deny at this time. (If it's relevant to your hiring process, please contact me privately about the matter.)</p>
   </section>
 </div>
