--- a/index.html
+++ b/index.html
@@ -1,28 +1,11 @@
 ---
-layout: default
+layout: no-navbar
 title: Forrest Wolf
 ---
-<section id="about">
-  <!-- <div class="left-side">
-    <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" class="large-image" />
-  </div>
-  <div class="right-side"> -->
-  <p>I'm Forrest Wolf, a software engineer and musician. Currently living in Brooklyn, NY; previously Des Moines, IA.</p>
-  <p>
-    <h4>Contact</h4>
-    <ul>
-      <li>
-        <a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
-      </li>
-
-      <li>
-        <a href="https://github.com/ForrestWeiswolf">Github</a>
-      </li>
-
-      <li>
-        <a href="./assets/image/2if24wp7oqlodqdlgei1n1520.png">LinkedIn</a>
-      </li>
-    </ul>
-  </p>
-  <!-- </div> -->
-</section>
+<div class="index">
+  <!-- <li><a href="{{ site.url }}/index.html">About</a></li> -->
+  <div><a href="https://github.com/ForrestWeiswolf">Software</a></div>
+  <div><a href="{{ site.url }}/music.html">Music</a></div>
+  <div><a href="{{ site.url }}/faq.html">FAQ</a></div>
+  <div><a href="{{ site.url }}/miscellania.html">Miscellania</a></div>
+</div>
