Re-add about/contact as its own page, with some improvements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: no-navbar
 title: Forrest Wolf
 ---
 <div class="index">
-  <!-- <li><a href="{{ site.url }}/index.html">About</a></li> -->
+  <div><a href="{{ site.url }}/index.html">About/Contact</a></div>
   <div><a href="https://github.com/ForrestWeiswolf">Software</a></div>
   <div><a href="{{ site.url }}/music.html">Music</a></div>
   <div><a href="{{ site.url }}/faq.html">FAQ</a></div>
