--- a/faq.html
+++ b/faq.html
@@ -19,10 +19,10 @@ title: Forrest Wolf - Psaltery
     }
   </script>
   <section id="faq">
-    <p>Despite the silly nature of some of these, they are all genuine questions that I have been asked multiple times. Make of that what you will.</p>
+    <p>These are all genuine questions that I have been asked multiple times. Make of that what you will.</p>
 
     <h4>Are you British?</h4>
-    <p>I've often been told I have a British accent. This is strange, as I haven't spent a significant amount of time in Britain, nor do I have any family from there. My brother seems to have the same accent I do, but we've never figured out where we got it.</p>
+    <p>I've often been told I have a British accent. This is strange, as I haven't spent a significant amount of time in Britain, nor do I have any family from there. My brother seems to have the same accent I do, but we've never figured out where we got it. Notably, we've only been told this by Americans; it doesn't sound British to actual British people.</p>
 
     <h4>Are you from the south?</h4>
     <p>No, I thought "y'all" was a good idea, so I adopted it into my vocabulary.</p>
@@ -33,17 +33,24 @@ title: Forrest Wolf - Psaltery
     <h4>There'll be pounding, overwhelming waves! What do you think about that?</h4>
     <p>Well, I think...</p>
 
-    <h4>Read anything interesting lately?</h4>
-    <p>(I'm not going to keep the website up to date on this, but if you want an idea what sort of things I read in general, <a href="./miscellania/books-2021.html">this list</a> should help.)</p>
+    <h4>What tech stack do you use?</h4>
+    <p>I've done mostly, but not exclusively, web dev. About half of my experience is with React; the other half is quite varied.</p>
+    <p>Languages and frameworks I have used professionally, in rough order of familiarity, include Typescript, Javascript (React, ReactNative, Express and Sequelize), Python (Django) Kotlin (Spring Boot), Java (Spring Boot) Swift, Go, C# (Dotnet). My job, as of this writing, mostly involves Python.</p>
+
+    <h4>Are you a vampire?</h4>
+    <p>I will neither confirm nor deny at this time. (If it's relevant to your hiring process, please contact me privately about the matter.)</p>
 
     <h4>How are you?</h4>
     <p>Fine, thanks. How're you?*</p>
     <sub>* I believe that this exchange is generally used as a <a href=https://en.wikipedia.org/wiki/Phatic_expression>phatic expression</a>; in some cases, my response here may thus be intended more as 'giving the correct password in a standard protocol' than as a statement of fact.</sub>
 
+    <h4>Read anything interesting lately?</h4>
+    <p>(I'm not going to keep the website up to date on this, but if you want an idea what sort of things I read in general, <a href="./miscellania/books-2021.html">this list</a> should help.)</p>
+
     <h4>What's the password?</h4>
     <p id="a-password"></p>
 
-    <h4>Are you a vampire?</h4>
+    <h4>Is that your real name?</h4>
     <p>I will neither confirm nor deny at this time. (If it's relevant to your hiring process, please contact me privately about the matter.)</p>
   </section>
 </div>
