Add link to Horrormons soundtrack

--- a/music.html
+++ b/music.html
@@ -38,4 +38,15 @@ title: Forrest Wolf - Music
       <a href="./psaltery.html">Here's</a> an explanation of what it's like.</p>
     </div>
   </section>
+
+  <section class="project flex">
+    <h2 class="left-side no-image">
+      <a href="https://forrestwolf.bandcamp.com/album/horrormons-soundtrack-from-a-hypothetical-video-game">Horrormons: Soundtrack from a Hypothetical Video Game</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        The soundtrack to a hypothetical video game adaptation of a TTRPG campaign in which I was a player.
+      </p>
+    </div>
+  </section>
 </div>
