--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,8 @@ title: Forrest Wolf - Psaltery
         'Schelling point',
         'Correct horse battery staple',
         'Recognition code 27: I am a potato',
-        'Fine, thanks. How are you?'
+        'Fine, thanks. How are you?',
+        'Mellon'
       ];
       const randomPassword = passwords[Math.floor(Math.random() * passwords.length)];
       document.getElementById('a-password').textContent = randomPassword;
