Add Horrormons cover image

--- a/music.html
+++ b/music.html
@@ -40,7 +40,8 @@ title: Forrest Wolf - Music
   </section>
 
   <section class="project flex">
-    <h2 class="left-side no-image">
+    <h2 class="left-side">
+      <img src="./assets/images/mons-cover.png" alt="Photo of a bowed psaltery">
       <a href="https://forrestwolf.bandcamp.com/album/horrormons-soundtrack-from-a-hypothetical-video-game">Horrormons: Soundtrack from a Hypothetical Video Game</a>
     </h2>
     <div class="project-info right-side">
