Make img alt less bad

--- a/music.html
+++ b/music.html
@@ -30,6 +30,7 @@ title: Forrest Wolf - Music
   <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/remember-the-world-cover.png" alt="Remember the World cover">
+      <!-- TODO: write a description of the cover image -->
       <a href="https://forrestwolf.bandcamp.com/album/remember-the-world">Remember the World</a>
     </h2>
     <div class="project-info right-side">
@@ -41,7 +42,8 @@ title: Forrest Wolf - Music
 
   <section class="project flex">
     <h2 class="left-side">
-      <img src="./assets/images/mons-cover.png" alt="Photo of a bowed psaltery">
+      <img src="./assets/images/mons-cover.png" alt="Horromons album cover">
+      <!-- TODO: write a description of the cover image -->
       <a href="https://forrestwolf.bandcamp.com/album/horrormons-soundtrack-from-a-hypothetical-video-game">Horrormons: Soundtrack from a Hypothetical Video Game</a>
     </h2>
     <div class="project-info right-side">
