Fix spelling of 'reason'

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ title: About
   <!-- <div class="right-side"> -->
   <p>I'm Forrest Wolf, a software engineer and musician. Currently living in Brooklyn, NY; previously Des Moines, IA.
   </p>
-  <p>This website contains links to several of my projects, as well as a few miscellania which I thought were worth having up on the internet for one reaons or another.</p>
+  <p>This website contains links to several of my projects, as well as a few miscellania which I thought were worth having up on the internet for one reason or another.</p>
   <!-- </div> -->
 </section>
 <section>
