--- a/music.html
+++ b/music.html
@@ -23,14 +23,15 @@ title: Forrest Wolf - Music
     </h2>
     <div class="project-info right-side">
       <p>I play a rather unusual instrument called a bowed psaltery.
-      <a href="./psaltery.html">Here's</a> an explanation of what it's like.</p>
+        <a href="./psaltery.html">Here's</a> an explanation of what it's like.
+      </p>
     </div>
   </section>
 
   <section class="project flex">
     <h2 class="left-side">
-      <img src="./assets/images/remember-the-world-cover.png" alt="Remember the World cover">
-      <!-- TODO: write a description of the cover image -->
+      <img src="./assets/images/remember-the-world-cover.png"
+        alt="Album cover for 'Remember the World', consisting of a stylized moon in the center of a circle lined with irregular inward-facing triangles, drawn in white on black">
       <a href="https://forrestwolf.bandcamp.com/album/remember-the-world">Remember the World</a>
     </h2>
     <div class="project-info right-side">
@@ -42,9 +43,10 @@ title: Forrest Wolf - Music
 
   <section class="project flex">
     <h2 class="left-side">
-      <img src="./assets/images/mons-cover.png" alt="Horromons album cover">
-      <!-- TODO: write a description of the cover image -->
-      <a href="https://forrestwolf.bandcamp.com/album/horrormons-soundtrack-from-a-hypothetical-video-game">Horrormons: Soundtrack from a Hypothetical Video Game</a>
+      <img src="./assets/images/mons-cover.png"
+        alt="Album cover for 'Horromons', depicting an eight-pointed star with alternating dark blue and dark brown points, on a dark background">
+      <a href="https://forrestwolf.bandcamp.com/album/horrormons-soundtrack-from-a-hypothetical-video-game">Horrormons:
+        Soundtrack from a Hypothetical Video Game</a>
     </h2>
     <div class="project-info right-side">
       <p>
