--- a/about.html
+++ b/about.html
@@ -27,5 +27,8 @@ title: About
     <li>
       <b>Phone: </b>Not public, but if you know me basically at all, you can ask
     </li>
+    <li>
+      <b>LinkedIn (mostly unused): </b><a href="https://www.linkedin.com/in/forrest-wolf/">https://www.linkedin.com/in/forrest-wolf/</a>
+    </li>
   </ul>
 </section>
