--- a/faq.html
+++ b/faq.html
@@ -25,14 +25,11 @@ title: Forrest Wolf - Psaltery
     <h4>Are you British?</h4>
     <p>I've often been told I have a British accent. This is strange, as I haven't spent a significant amount of time in Britain, nor do I have any family from there. My brother seems to have the same accent I do, but we've never figured out where we got it. Notably, we've only been told this by Americans; it doesn't sound British to actual British people.</p>
 
-    <h4>Are you from the south?</h4>
+    <h4>Are you from the South?</h4>
     <p>No, I thought "y'all" was a good idea, so I adopted it into my vocabulary.</p>
 
     <h4>What's that instrument you play?</h4>
     <p><a href="./psaltery.html">Bowed psaltery.</a></p></p>
-
-    <h4>There'll be pounding, overwhelming waves! What do you think about that?</h4>
-    <p>Well, I think...</p>
 
     <h4>What tech stack do you use?</h4>
     <p>I've done mostly, but not exclusively, web dev. About half of my experience is with React; the other half is quite varied.</p>
