Add link to Unknown Artist

--- a/music.html
+++ b/music.html
@@ -54,4 +54,21 @@ title: Forrest Wolf - Music
       </p>
     </div>
   </section>
+
+  <section class="project flex">
+    <h2 class="left-side">
+      <img src="https://f4.bcbits.com/img/a3360012124_16.jpg"
+        alt="Album cover for 'Unknown Artist', consisting of a greyscale photo of a moose with the word UNKNOWN in capital letters superimposed on it">
+      <a href="https://track12.bandcamp.com/album/unknown-artist">Unknown Artist</a>
+    </h2>
+    <div class="project-info right-side">
+      <p>
+        An instrumental EP, released April 2023. Not meant to be taken entirely seriously.
+        <aside><small><i>
+          "Track 12" is the project of F. Wolf & A. Moore. We would additionally like to thank M & M Enterprises ("Everyone has a share") for the invaluable loan of their ampersand, without which this album probably could have been completed.
+        </i>
+        </small></aside>
+      </p>
+    </div>
+  </section>
 </div>
