Minor update to FAQ about tech stack

--- a/faq.html
+++ b/faq.html
@@ -32,8 +32,8 @@ title: Forrest Wolf - Psaltery
     <p><a href="./psaltery.html">Bowed psaltery.</a></p></p>
 
     <h4>What tech stack do you use?</h4>
-    <p>I've done mostly, but not exclusively, web dev. About half of my experience is with React; the other half is quite varied.</p>
-    <p>Languages and frameworks I have used professionally, in rough order of familiarity, include Typescript, Javascript (React, ReactNative, Express and Sequelize), Python (Django) Kotlin (Spring Boot), Java (Spring Boot) Swift, Go, C# (Dotnet). My job, as of this writing, mostly involves Python.</p>
+    <p>About half of my experience is with React; the other half is quite varied.</p>
+    <p>Languages and frameworks I have used professionally, in rough order of familiarity, include Typescript, Javascript (React, ReactNative, Express and Sequelize), Python (Django) Kotlin (Spring Boot), Java (Spring Boot) Swift, Go, C# (Dotnet).</p>
 
     <h4>Are you a vampire?</h4>
     <p>I will neither confirm nor deny at this time. (If it's relevant to your hiring process, please contact me privately about the matter.)</p>
