--- a/miscellania.html
+++ b/miscellania.html
@@ -7,7 +7,7 @@ title: Forrest Wolf - Miscelania
     <a href="https://admonymous.co/forrestwolf">Admonymous</a> (Leave me anonymous feedback)
   </li>
   <li>
-    <a href="https://manifold.markets/Forrest">Manifold Markets</a>
+    <a href="https://manifold.markets/Forrest?referrer=Forrest">Manifold Markets</a>
   </li>
   <li>
     <a href="{{ site.url }}/miscellania/lesser-known-sf-f.html">Favorite lesser-known SF&F</a>
