Acknowledge that Every Heart A Doorway isn't really lesser-known

--- a/miscellania/lesser-known-sf-f.html
+++ b/miscellania/lesser-known-sf-f.html
@@ -10,7 +10,7 @@ title: Favorite lesser-known SF&F
     <li>Invisible Cities, by Italo Calvino</li>
     <li>The Collapsium, by Wil McCarthy</li>
     <li>A Madness of Angels, by Kate Griffin</li>
-    <li>Every Heart A Doorway, by Seanan McGuire</li>
     <li>Radiance, by Cathrynne Valente</li>
   </ul>
+  <p>(Honorary mention: Every Heart A Doorway, by Seanan McGuire. While it seems like hardly anybody I know has read it, a book that won the Hugo <i>and</i> Nebula can'r really be considered 'lesser-known SF&F')</p>
 </div>
