Minor improvements to hidden pages explanation

--- a/hidden/hidden-pages-explanation.html
+++ b/hidden/hidden-pages-explanation.html
@@ -9,15 +9,16 @@ title: Hidden Pages
 
   <h2>Why?</h2>
 
-  <p>I wanted to have non-public pages on this site, that I could send people a link to but that couldn't be found
-    otherwise. However, the site is fully open-source, so normally, even if I don't link to a page anywhere it can be
-    found in the Github repo. Also, because I thought it would be interesting.</p>
+  <p>This site is fully open-source, so normally, even if I don't link to a page anywhere it can be found in the Github
+    repo. However, I wanted to have non-public pages on this site, ones that I could send people a link to, but that couldn't be found otherwise.</p>
+  <p>Also, because I thought it would be interesting.</p>
 
-  <h2>How?</h2>
+  <h2>How does it work?</h2>
 
   <p>Basically, the content of the page is encrypted, and there's some Javascript code that will attempt to decrypt it
     using a key in the URL's query string. So I can send people I want to share a given page with a link containing the
-    key, but anyone else will only be able to see the encrypted HTML.</p>
+    key, like <a href="/hidden/test?key=NTA=OTg=Mjg=Nw==ODg=MjE=MTMzMTEwMTAzMTkxMTE0MjA1MjM5MTA0MTQxMTM4">so</a>, but
+    anyone else will only be able to see the encrypted HTML.</p>
 
   <p>Each page has a different key, so I can share one without revealing all of them.</p>
 
