--- a/hidden/encryption.html
+++ b/hidden/encryption.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Encrypt HTML
+title: Encryption for hidden pages
 ---
 <div>
   <script src="./cryptography.js" defer></script>
