--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
     <img src="https://avatars2.githubusercontent.com/u/20613033?s=460" class="large-image" />
   </div> -->
   <!-- <div class="right-side"> -->
-  <p>I'm Forrest Wolf, a software engineer and musician. Currently living in Brooklyn, NY; previously Des Moines, IA.
+  <p>I'm Forrest Wolf, a software engineer, musician, and eddective altruist. Currently living in Brooklyn, NY; previously Des Moines, IA.
   </p>
   <p>This website contains links to several of my projects, as well as a few miscellania which I thought were worth having up on the internet for one reason or another.</p>
   <!-- </div> -->
