--- a/miscellania.html
+++ b/miscellania.html
@@ -16,6 +16,6 @@ title: Forrest Wolf - Miscelania
     <a href="{{ site.url }}/miscellania/books-2021.html">Books I read in 2021</a>
   </li>
   <li>
-    <a href="{{ site.url }}/miscellania/difficult-recommendations.html">Stories which are difficult to recommend</a>
+    <a href="{{ site.url }}/miscellania/difficult-recommendations.html">Stories which are difficult to recommend (because the reason I want to recommend them is a spoiler)</a>
   </li>
 </ul>
