Move Admonymous from miscellania to contact info

--- a/about.html
+++ b/about.html
@@ -18,9 +18,6 @@ title: About
     <li>
       <b>Email: </b><a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
     </li>
-    <!-- <li>
-    <b>Github: </b><a href="https://github.com/ForrestWeiswolf">ForrestWeiswolf</a>
-  </li> -->
     <li>
       <b>Discord: </b>Forrest Wolf#6126
     </li>
@@ -29,6 +26,9 @@ title: About
     </li>
     <li>
       <b>LinkedIn (mostly unused): </b><a href="https://www.linkedin.com/in/forrest-wolf/">https://www.linkedin.com/in/forrest-wolf/</a>
+    </li>
+    <li>
+      <a href="https://admonymous.co/forrestwolf">Admonymous</a> (Leave me anonymous feedback)
     </li>
   </ul>
 </section>
