Phrasing improvements in hidden pages explanation

--- a/hidden/hidden-pages-explanation.html
+++ b/hidden/hidden-pages-explanation.html
@@ -16,7 +16,7 @@ title: Hidden Pages
   <h2>How does it work?</h2>
 
   <p>Basically, the content of the page is encrypted, and there's some Javascript code that will attempt to decrypt it
-    using a key in the URL's query string. So I can send people I want to share a given page with a link containing the
+    using a key in the URL's query string. So when I want to share a hidden page with someone, I can send them a link containing the
     key, like <a href="/hidden/test?key=NTA=OTg=Mjg=Nw==ODg=MjE=MTMzMTEwMTAzMTkxMTE0MjA1MjM5MTA0MTQxMTM4">so</a>, but
     anyone else will only be able to see the encrypted HTML.</p>
 
@@ -30,5 +30,5 @@ title: Hidden Pages
     so it should be presumed that they are <i>not</i> fully secure.)</p>
   <p>In most circumstances, I wouldn't recommend an approach like this without much more careful thought about whether
     it works and is appropriate. In this particular case, however, the stakes are very low, since I don't plan to put
-    anything genuinely secret here, and I thought it would be interesting to try it out.</p>
+    anything seriously secret here, and I thought it would be interesting to try it out.</p>
 </div>
