Phrasing improvements in list of stories difficult to recommend

--- a/miscellania/difficult-recommendations.html
+++ b/miscellania/difficult-recommendations.html
@@ -5,6 +5,7 @@ title: Stories which are difficult to recommend
 <div>
   <p>Sometimes, I want to recommed a story to someone, but run into the tricky situation where some key fact about it is also a spoiler that they'd likely rather not know in advance. This list consists of such works of fiction.</p>
   <p>Derivative works are towards the end, and original ones towards the start; other than that the order is arbitrary.</p>
+  <p>Expect oddities and surprises here; some of these stories are not what they seem, and I may have given misleading descriptions of them in this list, in cases where that seemed appropriate.</p>
   <ul>
     <li>
       <p>The Man Who Was Thursday, by G. K. Chesterton</p>
@@ -21,7 +22,7 @@ title: Stories which are difficult to recommend
     </li>
     <li>
       <p>Doctor Brinner, Ghost Psychiatrist, by Andrew Hussie</p>
-      <p>An earlier work by Andrew Hussie, of Homestuck fame. Even longer and more confusing than Homestuck is, and that's saying something. On balance it probably isn't worth your time to read the whole thing (especially since it's hard to find a complete version these days, the only site I could find on a quick seach was missing the whole arc with the Devil's grandmother). Consider reading the summary on TvTropes instead, it'll get you half of the worthwhile stuff in about 1% of the time.</p>
+      <p>An earlier work by Andrew Hussie, of Homestuck fame. Even weirder and more confusing than Homestuck is, and that's saying something. On balance it probably isn't worth your time to read the whole thing (especially since it's hard to find a complete version these days, the only site I could find on a quick seach was missing the whole arc with the Devil's grandmother). Consider reading the summary on TvTropes instead, it'll get you half of the worthwhile stuff in about 1% of the time.</p>
     </li>
     <li>
       <p>A Study in Emerald, by Neil Gaiman</p>
