Link to hidden pages explanation from the miscelania index

--- a/miscellania.html
+++ b/miscellania.html
@@ -15,4 +15,7 @@ title: Forrest Wolf - Miscelania
   <li>
     <a href="{{ site.url }}/miscellania/difficult-recommendations.html">Stories which are difficult to recommend (because the reason I want to recommend them is a spoiler)</a>
   </li>
+  <li>
+    <a href="{{ site.url }}/hidden/hidden-pages-explanation.html">An explanation regarding the hidden/encrypted pages of this website.</a>
+  </li>
 </ul>
