Small content edits on music page

--- a/music.html
+++ b/music.html
@@ -11,7 +11,7 @@ title: Forrest Wolf - Music
     </h2>
     <div class="project-info right-side">
       <p>
-        Youtube channel, on which I mostly cover various songs on the psaltery.
+        My Youtube channel; almost entirely covers.
       </p>
     </div>
   </section>
@@ -64,10 +64,6 @@ title: Forrest Wolf - Music
     <div class="project-info right-side">
       <p>
         An instrumental EP, released April 2023. Not meant to be taken entirely seriously.
-        <aside><small><i>
-          "Track 12" is the project of F. Wolf & A. Moore. We would additionally like to thank M & M Enterprises ("Everyone has a share") for the invaluable loan of their ampersand, without which this album probably could have been completed.
-        </i>
-        </small></aside>
       </p>
     </div>
   </section>
