Move info about psaltery to intro paragraph

--- a/music.html
+++ b/music.html
@@ -4,6 +4,13 @@ title: Forrest Wolf - Music
 ---
 <div>
   <h1>Music</h1>
+  <section>
+    <p>I play a rather unusual instrument called a bowed psaltery.
+    <a href="./psaltery.html">Here's</a> an explanation of what it's like.
+    </p>
+    <p>Below can be found links to most of my publically available music.</p>
+  </section>
+
   <section class="project flex">
     <h2 class="left-side">
       <img src="./assets/images/playing-psaltery.png" alt="Photo of Forrest Wolf, playing the bowed psaltery">
@@ -11,19 +18,7 @@ title: Forrest Wolf - Music
     </h2>
     <div class="project-info right-side">
       <p>
-        My Youtube channel; almost entirely covers.
-      </p>
-    </div>
-  </section>
-
-  <section class="project flex">
-    <h2 class="left-side">
-      <img src="./assets/images/psaltery.jpg" alt="Photo of a bowed psaltery">
-      <a href="./psaltery.html">Bowed Psaltery</a>
-    </h2>
-    <div class="project-info right-side">
-      <p>I play a rather unusual instrument called a bowed psaltery.
-        <a href="./psaltery.html">Here's</a> an explanation of what it's like.
+        My Youtube channel; mostly covers of folk or rock songs on the psaltery.
       </p>
     </div>
   </section>
