Add date to mons album description

--- a/music.html
+++ b/music.html
@@ -45,7 +45,7 @@ title: Forrest Wolf - Music
     </h2>
     <div class="project-info right-side">
       <p>
-        The soundtrack to a hypothetical video game adaptation of a TTRPG campaign in which I was a player.
+        The soundtrack to a hypothetical video game adaptation of a TTRPG campaign in which I was a player. Released April 2021.
       </p>
     </div>
   </section>
