--- a/software.html
+++ b/software.html
@@ -41,7 +41,7 @@ title: Forrest Wolf - Software
     <br />
 
     <p>More detials on my work history can be found on <a href="https://www.linkedin.com/in/forrest-wolf/">LinkedIn</a>,
-      and more of my side project can be found on <a href="https://github.com/ForrestWeiswolf">Github</a>.</p>
+      and more of my side projects and open source contributions can be found on <a href="https://github.com/ForrestWeiswolf">Github</a>.</p>
 
     <br />
 
