Fix mangled link in hidden pages explanation

--- a/hidden/hidden-pages-explanation.html
+++ b/hidden/hidden-pages-explanation.html
@@ -22,7 +22,7 @@ title: Hidden Pages
 
   <p>Each page has a different key, so I can share one without revealing all of them.</p>
 
-  <p>The widget I use to encrypt them can be found <a href="{{ site.url }}/hidden/encryption.html"></a>here</a>.</p>
+  <p>The widget I use to encrypt them can be found <a href="{{ site.url }}/hidden/encryption.html">here</a>.</p>
 
   <h2>Is it secure?</h2>
 
