Add hidden pages to list of software projects

--- a/software.html
+++ b/software.html
@@ -21,6 +21,10 @@ title: Forrest Wolf - Software
         (deprecated)</li>
       <li><s><a href="https://github.com/Bluegrass-Grief-Owls/coordin-eat">Coordin-Eat</a></s> (not currently hosted)
       </li>
+      <li>
+        The <a href="http://localhost:4000/hidden/hidden-pages-explanation.html">hidden/encrypted</a> pages of this
+        website (and the site in general).
+      </li>
     </ul>
 
     <p>Some open-source projects which I have contributed to include:</p>
