--- a/software.html
+++ b/software.html
@@ -53,7 +53,7 @@ title: Forrest Wolf - Software
     <footer id="footnotes">
       <small id="footnote-1"><sup>1</sup> Actually, I applied to a job at a small software consultancy called Pillar
         Technology, which was acquired by Accenture shortly before I joined; so I was working with Pillar teams in the
-        PIllar style the whole time.</small>
+        Pillar style the whole time.</small>
     </footer>
   </section>
 </div>
