Relegate the FAQ to miscelania

--- a/miscellania.html
+++ b/miscellania.html
@@ -4,6 +4,9 @@ title: Forrest Wolf - Miscelania
 ---
 <ul>
   <li>
+    <a href="{{ site.url }}/miscellania/faq">FAQ</a>
+  </li>
+  <li>
     <a href="https://manifold.markets/Forrest?referrer=Forrest">Manifold Markets</a>
   </li>
   <li>
