Fix spelling of 'miscellanea' throughout

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: Forrest Wolf
   <div><a href="{{ site.url }}/about.html">About/Contact</a></div>
   <div><a href="https://github.com/ForrestWeiswolf">Software</a></div>
   <div><a href="{{ site.url }}/music.html">Music</a></div>
-  <div><a href="{{ site.url }}/miscellania.html">Miscellania</a></div>
+  <div><a href="{{ site.url }}/miscellanea.html">Miscellanea</a></div>
 </div>
