--- a/miscellania.html
+++ b/miscellania.html
@@ -1,22 +1,22 @@
 ---
 layout: default
-title: Forrest Wolf - Miscelania
+title: Forrest Wolf - Miscellanea
 ---
 <ul>
   <li>
-    <a href="{{ site.url }}/miscellania/faq">FAQ</a>
+    <a href="{{ site.url }}/miscellanea/faq">FAQ</a>
   </li>
   <li>
     <a href="https://manifold.markets/Forrest?referrer=Forrest">Manifold Markets</a>
   </li>
   <li>
-    <a href="{{ site.url }}/miscellania/lesser-known-sf-f.html">Favorite lesser-known SF&F</a>
+    <a href="{{ site.url }}/miscellanea/lesser-known-sf-f.html">Favorite lesser-known SF&F</a>
   </li>
   <li>
-    <a href="{{ site.url }}/miscellania/books-2021.html">Books I read in 2021</a>
+    <a href="{{ site.url }}/miscellanea/books-2021.html">Books I read in 2021</a>
   </li>
   <li>
-    <a href="{{ site.url }}/miscellania/difficult-recommendations.html">Stories which are difficult to recommend (because the reason I want to recommend them is a spoiler)</a>
+    <a href="{{ site.url }}/miscellanea/difficult-recommendations.html">Stories which are difficult to recommend (because the reason I want to recommend them is a spoiler)</a>
   </li>
   <li>
     <a href="{{ site.url }}/hidden/hidden-pages-explanation.html">An explanation regarding the hidden/encrypted pages of this website.</a>
