--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 ---
 <section id="about">
   <p>I'm Forrest Wolf, a software engineer, musician, and effective altruist. Currently living in Brooklyn, NY; previously Des Moines, IA.</p>
-  <p>This website contains links to several of my projects, as well as a few miscellania which I thought were worth having up on the internet for one reason or another.</p>
+  <p>This website contains links to several of my projects, as well as a few miscellanea which I thought were worth having up on the internet for one reason or another.</p>
 </section>
 <section>
   <h4>Contact</h4>
