--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@ layout: default
 title: About
 ---
 <section id="about">
-  <p>I'm Forrest Wolf, a software engineer, musician, and effective altruist. Currently living in Brooklyn, NY; previously Des Moines, IA.</p>
+  <p>I'm Forrest Wolf, a software engineer and musician.</p>
+
   <p>This website contains links to several of my projects, as well as a few miscellanea which I thought were worth having up on the internet for one reason or another.</p>
 </section>
 <section>
