Update discord username

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ title: About
       <b>Email: </b><a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
     </li>
     <li>
-      <b>Discord: </b>Forrest Wolf#6126
+      <b>Discord: </b>forrestwolf
     </li>
     <li>
       <b>Phone: </b>Not public, but if you know me basically at all, you can ask
