--- a/about.html
+++ b/about.html
@@ -17,10 +17,7 @@ title: About
       <b>Discord: </b>forrestwolf
     </li>
     <li>
-      <b>Phone: </b>Not public, but if you know me basically at all, you can ask
-    </li>
-    <li>
-      <b>LinkedIn (mostly unused): </b><a href="https://www.linkedin.com/in/forrest-wolf/">https://www.linkedin.com/in/forrest-wolf/</a>
+      <b>LinkedIn: </b><a href="https://www.linkedin.com/in/forrest-wolf/">https://www.linkedin.com/in/forrest-wolf/</a>
     </li>
     <li>
       <a href="https://admonymous.co/forrestwolf">Admonymous</a> (Leave me anonymous feedback)
