Relegate admonymous to miscelania

--- a/miscellanea.html
+++ b/miscellanea.html
@@ -10,6 +10,9 @@ title: Forrest Wolf - Miscellanea
     <a href="https://manifold.markets/Forrest?referrer=Forrest">Manifold Markets</a>
   </li>
   <li>
+    <a href="https://admonymous.co/forrestwolf">Admonymous</a> (Leave me anonymous feedback)
+  </li>
+  <li>
     <a href="{{ site.url }}/miscellanea/lesser-known-sf-f.html">Favorite lesser-known SF&F</a>
   </li>
   <li>
