Don't use relative paths in links

--- a/hidden/encryption.html
+++ b/hidden/encryption.html
@@ -3,7 +3,7 @@ layout: default
 title: Encryption for hidden pages
 ---
 <div>
-  <script src="./cryptography.js" defer></script>
+  <script src="{{ site.url }}/hidden/cryptography.js" defer></script>
   <script defer>
     window.onload = function () {
       const button = document.getElementById('encrypt-button')
