--- a/miscellanea/faq.html
+++ b/miscellanea/faq.html
@@ -33,14 +33,14 @@ title: Forrest Wolf - FAQ
     <p>No, I thought "y'all" was a good idea, so I adopted it into my vocabulary.</p>
 
     <h4>What's that instrument you play?</h4>
-    <p><a href="./psaltery.html">Bowed psaltery.</a></p></p>
+    <p><a href="{{ site.url }}/psaltery.html">Bowed psaltery.</a></p></p>
 
     <h4>How are you?</h4>
     <p>Fine, thanks. How're you?*</p>
     <sub>* I believe that this exchange is generally used as a <a href=https://en.wikipedia.org/wiki/Phatic_expression>phatic expression</a>; in some cases, my response here may thus be intended more as 'giving the correct password in a standard protocol' than as a statement of fact.</sub>
 
     <h4>Read anything interesting lately?</h4>
-    <p>(I'm not going to keep the website up to date on this, but if you want an idea what sort of things I read in general, <a href="./miscellanea/books-2021.html">this list</a> should help.)</p>
+    <p>(I'm not going to keep the website up to date on this, but if you want an idea what sort of things I read in general, <a href="{{ site.url }}/miscellanea/books-2021.html">this list</a> should help.)</p>
 
     <h4>What's the password?</h4>
     <p id="a-password"></p>
