--- a/music.html
+++ b/music.html
@@ -6,14 +6,14 @@ title: Forrest Wolf - Music
   <h1>Music</h1>
   <section>
     <p>I play a rather unusual instrument called a bowed psaltery.
-    <a href="./psaltery.html">Here's</a> an explanation of what it's like.
+    <a href="{{ site.url }}/psaltery.html">Here's</a> an explanation of what it's like.
     </p>
     <p>Below can be found links to most of my publically available music.</p>
   </section>
 
   <section class="project flex">
     <h2 class="left-side">
-      <img src="./assets/images/playing-psaltery.png" alt="Photo of Forrest Wolf, playing the bowed psaltery">
+      <img src="{{ site.url }}/assets/images/playing-psaltery.png" alt="Photo of Forrest Wolf, playing the bowed psaltery">
       <a href="https://www.youtube.com/channel/UCAqR1U3HQkJ9P0u6ZWwL5jA">Youtube</a>
     </h2>
     <div class="project-info right-side">
@@ -25,7 +25,7 @@ title: Forrest Wolf - Music
 
   <section class="project flex">
     <h2 class="left-side">
-      <img src="./assets/images/remember-the-world-cover.png"
+      <img src="{{ site.url }}/assets/images/remember-the-world-cover.png"
         alt="Album cover for 'Remember the World', consisting of a stylized moon in the center of a circle lined with irregular inward-facing triangles, drawn in white on black">
       <a href="https://forrestwolf.bandcamp.com/album/remember-the-world">Remember the World</a>
     </h2>
@@ -38,7 +38,7 @@ title: Forrest Wolf - Music
 
   <section class="project flex">
     <h2 class="left-side">
-      <img src="./assets/images/mons-cover.png"
+      <img src="{{ site.url }}/assets/images/mons-cover.png"
         alt="Album cover for 'Horromons', depicting an eight-pointed star with alternating dark blue and dark brown points, on a dark background">
       <a href="https://forrestwolf.bandcamp.com/album/horrormons-soundtrack-from-a-hypothetical-video-game">Horrormons:
         Soundtrack from a Hypothetical Video Game</a>
