--- a/psaltery.html
+++ b/psaltery.html
@@ -4,7 +4,7 @@ title: Forrest Wolf - Psaltery
 ---
 <div class="flex">
   <div class="left-side">
-    <img src="./assets/images/psaltery.jpg" class="large-image"/>
+    <img src="{{ site.url }}/assets/images/psaltery.jpg" class="large-image"/>
   </div>
   <div class="right-side">
     <section  id="summary">
