Remove dead link to The Sun and I

--- a/miscellanea/difficult-recommendations.html
+++ b/miscellanea/difficult-recommendations.html
@@ -14,7 +14,7 @@ title: Stories which are difficult to recommend
       <p>If On a Winter's Night a Traveler, by Italo Calvino</p>
     </li>
     <li>
-      <p><a href="https://subterraneanpress.com/magazine/summer_2013/the_sun_and_i_by_k_j_parker">The Sun and I</a>, by K. J. Parker</p>
+      <p>The Sun and I, by K. J. Parker</p>
     </li>
     <li>
       <p><a href="https://themechanisms.bandcamp.com/album/the-bifrost-incident">The Bifrost Incident</a>, by The Mechanisms</p>
