Update footnote style

--- a/software.html
+++ b/software.html
@@ -6,7 +6,7 @@ title: Forrest Wolf - Software
   <section>
     <p>I've worked as a software engineer for some time, most recently on the data enrichment team at Mintel, working
       primarily on improving their data pipelines;
-      prior to that, I worked for Accenture<sup><a href="#footnote-1">[1]</a></sup>,
+      prior to that, I worked for Accenture<sup><a href="#footnote-1" class="footnote">*</a></sup>,
       on a variety of projects for multiple clients.</p>
 
     <br />
@@ -51,8 +51,8 @@ title: Forrest Wolf - Software
     <br />
 
     <footer id="footnotes">
-      <small id="footnote-1"><sup>1</sup> Actually, I applied to a job at a small software consultancy called Pillar
-        Technology, which was acquired by Accenture shortly before I joined; so I was working with Pillar teams in the
+      <small id="footnote-1"><sup>*</sup> Actually, I applied to a job at a small software consultancy called Pillar
+        Technology, which was acquired by Accenture shortly before I joined, so I was working with Pillar teams in the
         Pillar style the whole time.</small>
     </footer>
   </section>
