--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Forrest Wolf
 ---
 <div class="index">
   <div><a href="{{ site.url }}/about.html">About/Contact</a></div>
-  <div><a href="https://github.com/ForrestWeiswolf">Software</a></div>
+  <div><a href="{{ site.url }}/software.html">Software</a></div>
   <div><a href="{{ site.url }}/music.html">Music</a></div>
   <div><a href="{{ site.url }}/miscellanea.html">Miscellanea</a></div>
 </div>
