--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 ---
-layout: no-navbar
-title: Forrest Wolf
+layout: default
+title: About
 ---
-<div class="index">
-  <div><a href="{{ site.url }}/about.html">About/Contact</a></div>
-  <div><a href="{{ site.url }}/software.html">Software</a></div>
-  <div><a href="{{ site.url }}/music.html">Music</a></div>
-  <div><a href="{{ site.url }}/miscellanea.html">Miscellanea</a></div>
-</div>
+<section id="about">
+  <p>I'm Forrest Wolf, a software engineer and musician.</p>
+
+  <p>This website contains links to several of my projects, as well as a few miscellanea which I thought were worth having up on the internet for one reason or another.</p>
+</section>
+<section>
+  <h4>Contact</h4>
+  <ul>
+    <li>
+      <b>Email: </b><a href="mailto:Forrest.Weiswolf@gmail.com">forrest.weiswolf@gmail.com</a>
+    </li>
+    <li>
+      <b>Discord: </b>forrestwolf
+    </li>
+    <li>
+      <b>LinkedIn: </b><a href="https://www.linkedin.com/in/forrest-wolf/">https://www.linkedin.com/in/forrest-wolf/</a>
+    </li>
+  </ul>
+</section>
