Update LinkedIn url, perhaps temporarily

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: About
       <b>Discord: </b>forrestwolf
     </li>
     <li>
-      <b>LinkedIn: </b><a href="https://www.linkedin.com/in/forrest-wolf/">https://www.linkedin.com/in/forrest-wolf/</a>
+      <b>LinkedIn: </b><a href="https://www.linkedin.com/in/franklin-wolf/">https://www.linkedin.com/in/franklin-wolf/</a>
     </li>
   </ul>
 </section>
